--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "subway-project",
+  "name": "subspotter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "node app.js",
-      "server": "nodemon app.js",
-      "server:debug": "nodemon --inspect app.js"
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "server:debug": "nodemon --inspect app.js",
+        "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jonathanahern/subway-project.git"
+    "url": "git+https://github.com/jonathanahern/subspotter.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jonathanahern/subway-project/issues"
+    "url": "https://github.com/jonathanahern/subspotter/issues"
   },
-  "homepage": "https://github.com/jonathanahern/subway-project#readme",
+  "homepage": "https://github.com/jonathanahern/subspotter#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "dependency": "0.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
